# ascii-comic-mcp

./: .gitignore  LICENSE  README.md  README.zh_CN.md  RELEASE_NOTES.md  ascii_shading.yaml  fastmcp.json  layout_composition.yaml  pyproject.toml  server.py  vault_boy_ascii.txt  verify_spacing.py
.trae/skills/ascii-art/: LESSONS_LEARNED.md  SKILL.md
docs/plans/: 2026-03-22-ascii-mode-design.md
samples/: circle.txt  hello_world.txt  pip_boy.txt  progress_bar_50.txt  thank_you.txt
