[project]
name = "ascii-comic-mcp"
version = "1.0.0"
description = "ASCII Comic MCP Server - Comic-style ASCII art with speech bubbles, bold banners, and action effects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "francistse", email = "francistse@users.noreply.github.com"}
]
keywords = ["mcp", "fastmcp", "ascii-art", "unicode", "diagrams", "comics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ascii-comic-mcp = "server:mcp.run"

[project.urls]
Homepage = "https://github.com/francistse/ascii-comic-mcp"
Repository = "https://github.com/francistse/ascii-comic-mcp"
Documentation = "https://github.com/francistse/ascii-comic-mcp#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "server.py",
    "samples/",
    "ascii_shading.yaml",
    "layout_composition.yaml",
    "fastmcp.json",
    "vault_boy_ascii.txt",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
